src/views/post/post.module.css
/* ... */
.xmasHat img {
  border: none;
}

/* clearfix to contain float elements */
.postDesktop::after {
  content: "";
  display: table;
  clear: both;
}

.postDesktop .hideThread {
  background-image: var(--post-hide-button-background-image);
}

.postDesktop .unhideThread {
  background-image: var(--post-unhide-button-background-image);
}

.postDesktop .fileText a {
  color: var(--post-link-text-color);
  text-decoration: var(--post-link-text-decoration);
}

.postDesktop .fileText a:hover {
  color: var(--post-link-text-color-hover);
  text-decoration: var(--post-link-text-decoration-hover);
}

.postDesktop .postInfo {
  width: 100%;
}

.userAddress {
  padding: 0 5px;
  border-radius: 6px;
  font-size: 0.8em;
  cursor: pointer;
}

.userAddress:hover {
  color: var(--post-quotelink-text-color-hover) !important;
}

.postDesktop .subject {
  color: var(--post-subject-text-color);
  font-weight: var(--post-subject-font-weight);
}

.postDesktop .name, .replyDesktop .name {
  color: var(--post-name-text-color);
  font-weight: var(--post-name-font-weight);
}

.postDesktop .postNumLink a, .postDesktop .postNumLink span, .replyDesktop .postNumLink a, .replyDesktop .postNumLink span {
  color: unset;
  text-decoration: unset;
}

.postDesktop .postNumLink a:hover, .postDesktop .postNumLink span:hover, .replyDesktop .postNumLink a:hover, .replyDesktop .postNumLink span:hover {
  color: var(--button-desktop-text-color-hover);
}

.postDesktop .stickyIconWrapper, .replyDesktop .stickyIconWrapper {
  padding-left: 5px;
  padding-right: 10px;
}

.postDesktop .closedIconWrapper {
  padding-left: 5px;
  padding-right: 10px;
}

.postDesktop .addPaddingInBetween {
  padding-left: 8px;
}

.stickyIconWrapper img, .closedIconWrapper img {
  position: absolute;
  width: 16px;
  height: 16px;
  image-rendering: pixelated;
}

.postDesktop .addPaddingBeforeReply {
  padding-right: 15px;
}

.postDesktop .closeMedia {
  color: var(--button-desktop-text-color);
  text-decoration: underline;
  text-transform: capitalize;
}

.postDesktop .closeMedia:hover {
  cursor: pointer;
  color: var(--button-desktop-text-color-hover);
}

.postDesktop .replyButton {
  padding-left: 10px;
}

.postDesktop .replyButton a {
  color: var(--button-desktop-text-color);
  text-decoration: var(--button-desktop-text-decoration);
  text-transform: capitalize;
}

.postDesktop .replyButton a:hover {
  cursor: pointer;
  color: var(--button-desktop-text-color-hover);
}

.postDesktop .spacer {
  width: 100%;
  padding: 5px;
}

.postDesktop .postMessage, .replyDesktop .postMessage {
  padding: 1em 40px;
  word-break: break-word;
}

.rulesMessage {
  font-weight: 700 !important;
}

.postDesktop .abbr {
  color: var(--post-mobile-abbr-text-color);
  font-size: var(--post-mobile-abbr-font-size);
}

.postDesktop .abbr a, .postDesktop .abbr span {
  color: var(--post-link-text-color);
  text-decoration: var(--post-content-link-text-decoration);
}

.postDesktop .abbr a:hover, .postDesktop .abbr span:hover {
  cursor: pointer;
  color: var(--post-link-text-color-hover);
  text-decoration: var(--post-content-link-text-decoration-hover);
}

.postDesktop .summary {
  padding-top: 10px;
  padding-left: 23px;
  position: relative;
  color: var(--post-mobile-abbr-text-color);
}

.stateString {
  color: var(--post-mobile-abbr-text-color);
}

.loadingString {
  display: block;
  color: var(--post-mobile-abbr-text-color);
} 

.postDesktop .summary .omittedRepliesButtonWrapper {
  position: absolute;
  top: 8px;
  left: 2px;
}

.postDesktop .summary .omittedRepliesButtonWrapper {
  background-repeat: no-repeat;
  background-position: center;
  width: 18px;
  height: 18px;
  display: inline-block;
  image-rendering: pixelated;
  cursor: pointer;
}

.postDesktop .summary .hideOmittedReplies {
  background-image: var(--post-hide-button-background-image);
}

.postDesktop .summary .showOmittedReplies {
  background-image: var(--post-unhide-button-background-image);
}

.postDesktop .summary a {
  color: var(--post-link-text-color);
  text-decoration: var(--post-content-link-text-decoration);
}

.postDesktop .summary a:hover {
  color: var(--post-link-text-color-hover);
  text-decoration: var(--post-content-link-text-decoration-hover);
}

/* clearfix to contain float elements */
.postMobile .postOp::after {
  content: "";
  display: table;
  clear: both;
}

.postMobile hr {
  padding-bottom: 30px;
}

.postMobile .thread {
  border-top: none;
  margin: 0;
  clear: both;
  padding-bottom: 30px;
}

.mobileUnhideButton {
  padding: 10px 0;
  display: flex;
  justify-content: center;
}

.mobileUnhideButton span {
  padding: 5px 18px 5px;
}

.unhideButtonHr {
  margin: 0;
}

.quotePreview {
  padding: 3px;
}

.postMobile .postContainer {
  background-color: var(--post-mobile-background-color);
}

.postMobile .postOp {
  display: inline;
}

.postMobile .postInfo {
  overflow: hidden;
  border-bottom: var(--post-mobile-info-border-bottom);
  border-top: var(--post-mobile-info-border-top);
  background-color: var(--post-mobile-info-background-color);
  color: var(--post-mobile-info-text-color);
  padding: 5px;
  clear: left;
}

.postMobile .nameBlock {
  clear: none;
}

.postMobile .nameBlock .name {
  color: var(--post-mobile-name-text-color);
  font-weight: var(--post-mobile-name-font-weight);
}

.postMobile .stickyIconWrapper {
  padding: 0 5px;
}

.postMobile .closedIconWrapper {
  padding: 0 5px;
}

.postMobile .addPaddingInBetween {
  padding: 0 13px;
}

.postMobile .nameBlock .subjectWrapper {
  display: block;
}

.postMobile .nameBlock .subject {
  color: var(--post-mobile-subject-text-color);
  font-weight: var(--post-mobile-subject-font-weight);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.postMobile .dateTimePostNum {
  display: block;
  text-align: right;
}

.postMobile .postNumLink a {
  color: unset;
  text-decoration: unset;
}
/* ... */

